testfx/errors/error_tests/edge_20_import_export.fx
// 模块语法
import { foo, bar } from "./module"
export default function main() {
    println("Hello")
}
require("lodash")
from math import sqrt
